[gd_scene load_steps=6 format=2]

[ext_resource path="res://lib/dance/viewport/3d/Viewport3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://lib/dance/viewport/ui/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Intro"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/BG:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.588235, 0.588235, 0.588235, 1 ) ]
}

[sub_resource type="ImageTexture" id=2]

[node name="Game" type="Node" groups=[
"game",
]]
script = ExtResource( 4 )
songfile = "res://test/[Kurosan] LUVORATORRRRRY!/LUVORATORRRRRY!.sm"
part = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Intro = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BG" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" parent="." instance=ExtResource( 2 )]

[node name="Viewport3D" parent="." instance=ExtResource( 1 )]

[connection signal="add_note" from="." to="Viewport3D" method="add_note"]
[connection signal="score_update" from="." to="Viewport3D" method="score_update"]
[connection signal="song_loaded" from="." to="Viewport3D" method="song_loaded"]
